--- a/apache-kafka/kafka-demo/kafka-consumer/pom.xml
+++ b/apache-kafka/kafka-demo/kafka-consumer/pom.xml
@@ -7,6 +7,7 @@
     <groupId>org.example</groupId>
     <artifactId>kafka-consumer</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>pom</packaging>
 
     <dependencies>
         <dependency>
@@ -30,6 +31,9 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <java.version>11</java.version>
+        <maven.compiler.source>11</maven.compiler.source>
+        <maven.compiler.target>11</maven.compiler.target>
     </properties>
 
 </project>
