--- a/apache-kafka/pom.xml
+++ b/apache-kafka/pom.xml
@@ -15,6 +15,11 @@
         <module>kafka-demo</module>
     </modules>
 
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <java.version>11</java.version>
+    </properties>
+
     <build>
         <plugins>
             <plugin>
