--- a/rabbitmq/pom.xml
+++ b/rabbitmq/pom.xml
@@ -11,4 +11,11 @@
 
     <artifactId>rabbitmq</artifactId>
 
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <java.version>11</java.version>
+        <maven.compiler.source>11</maven.compiler.source>
+        <maven.compiler.target>11</maven.compiler.target>
+    </properties>
+
 </project>
