--- a/rabbitmq/rabbitmq-producer/pom.xml
+++ b/rabbitmq/rabbitmq-producer/pom.xml
@@ -9,16 +9,9 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>rabbitmq</artifactId>
-    <packaging>pom</packaging>
-
-    <modules>
-        <module>rabbitmq-producer</module>
-    </modules>
+    <artifactId>rabbitmq-producer</artifactId>
 
     <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <java.version>11</java.version>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
     </properties>
