--- a/rabbitmq/pom.xml
+++ b/rabbitmq/pom.xml
@@ -13,7 +13,7 @@
     <packaging>pom</packaging>
 
     <modules>
-        <module>rabbitmq-producer</module>
+        <module>rabbitmq-producer-consumer-topic</module>
     </modules>
 
     <properties>
