--- a/rabbitmq/rabbitmq-producer-consumer-topic/pom.xml
+++ b/rabbitmq/rabbitmq-producer-consumer-topic/pom.xml
@@ -8,7 +8,7 @@
         <version>1.0-SNAPSHOT</version>-->
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.4.3</version>
+        <version>2.4.4</version>
         <relativePath/>
     </parent>
     <modelVersion>4.0.0</modelVersion>
@@ -47,7 +47,8 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
-                <version>2.4.3</version>
+                <version>2.4.4</version>
+                <!--<version>2.4.3</version>-->
             </plugin>
         </plugins>
     </build>
