--- a/rabbitmq/rabbitmq-producer-consumer-topic/src/main/resources/application.yml
+++ b/rabbitmq/rabbitmq-producer-consumer-topic/src/main/resources/application.yml
@@ -4,6 +4,14 @@ spring:
     port: 5672
     username: guest
     password: guest
+    listener:
+      simple:
+        retry:
+          enabled: true
+          initial-interval: 2s
+          max-attempts: 3
+          max-interval: 5s
+          multiplier: 2
 order:
   exchange: order.topic
   route: OrderTopic
